--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,9 @@ phases:
   runtime-versions:
    python: 3.7
   command:
-   -aws cloudformation package --template-file template.yaml --s3-bucket my-bucket --output-template-file outputTemplate.yaml
+   -aws cloudformation package --template-file template.yaml --s3-bucket lambda-pipeline-bucket --output-template-file outputSamTemplate.yaml
 artifacts:
  type: zip
  files:
   - template.yaml
-  - outputTemplate.yaml
+  - outputSamTemplate.yaml
