--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
  install:
   runtime-versions:
-   python: 3.7
+   java: corretto8
   command:
    -aws cloudformation package --template-file template.yml --s3-bucket lambda-pipeline-bucket-akg --output-template-file template-export.yml
 artifacts:
