--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,17 @@
 version: 0.2
 phases:
- install:
-  runtime-versions:
-   java: corretto8
-  command:
-   -aws cloudformation package --template-file template.yml --s3-bucket lambda-pipeline-bucket-akg --output-template-file template-export.yml
+  install:
+    commands:
+      # Install all dependencies (including dependencies for running tests)
+      - echo Install...
+  pre_build:
+    commands:
+      # Discover and run unit tests in the '__tests__' directory
+      - echo prebuild...
+  build:
+    commands:
+      # Use AWS SAM to package the application by using AWS CloudFormation
+      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template-file template-export.yml
 artifacts:
- type: zip
- files:
-  - template.yml
-  - template-export.yml
+  files:
+    - template-export.yml
